# enacs

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: buffer_cmds.rs  editing.rs  file_cmds.rs  kill_yank.rs  mod.rs  motion.rs  registry.rs  window_cmds.rs
src/core/: buffer.rs  cursor.rs  kill_ring.rs  mark.rs  mod.rs  position.rs  rope_ext.rs  undo.rs
src/frontend/: mod.rs  traits.rs
src/frontend/gui/: mod.rs  rect.wgsl
src/frontend/terminal/: input.rs  mod.rs  render.rs
src/keybinding/: default.rs  key.rs  keymap.rs  mod.rs  resolver.rs
src/state/: buffer_mgr.rs  editor.rs  minibuffer.rs  mod.rs  window_mgr.rs
